--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
-<h1><app-my-component></app-my-component></h1>
+<h1><app-navbar-component></app-navbar-component></h1>
 </div>
